--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ '*' ]
+    branches: [ 'dev' ]
   pull_request:
+    branches: [ 'dev' ]
   release:
     types: [ created, edited ]
   workflow_dispatch:
