--- a/web/package.json
+++ b/web/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "gin-vue-admin",
-    "version": "2.7.3",
+    "name": "pboard-admin",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
-        "serve": "node openDocument.js && vite --host --mode development",
+        "serve": "vite --host --mode development",
         "build": "vite build --mode production",
         "limit-build": "npm install increase-memory-limit-fixbug cross-env -g && npm run fix-memory-limit && node ./limit && npm run build",
         "preview": "vite preview",
